--- a/Table/Base.lproj/Main.storyboard
+++ b/Table/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -315,32 +316,40 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="316.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" tag="1000" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Post" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="feW-lJ-3je">
-                                            <rect key="frame" x="16" y="45" width="271" height="51"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="1000" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Post" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="feW-lJ-3je">
+                                            <rect key="frame" x="16" y="58" width="34.5" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" tag="1001" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cBE-jc-aLt">
-                                            <rect key="frame" x="16" y="8" width="140" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="1001" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cBE-jc-aLt">
+                                            <rect key="frame" x="16" y="29" width="38" height="17"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" tag="1002" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DzH-Tl-ILb">
-                                            <rect key="frame" x="183" y="8" width="122" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <imageView userInteractionEnabled="NO" tag="1003" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vCO-Zx-vbO">
+                                            <rect key="frame" x="16" y="86.5" width="288" height="209.5"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="1002" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DzH-Tl-ILb">
+                                            <rect key="frame" x="277.5" y="29" width="26.5" height="14.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView userInteractionEnabled="NO" tag="1003" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vCO-Zx-vbO">
-                                            <rect key="frame" x="16" y="104" width="288" height="192"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        </imageView>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="feW-lJ-3je" firstAttribute="top" secondItem="cBE-jc-aLt" secondAttribute="bottom" constant="12" id="0LE-vo-aA7"/>
+                                        <constraint firstItem="DzH-Tl-ILb" firstAttribute="top" secondItem="3Et-y8-rK7" secondAttribute="topMargin" constant="18" id="2Rw-VL-eXp"/>
+                                        <constraint firstItem="vCO-Zx-vbO" firstAttribute="top" secondItem="feW-lJ-3je" secondAttribute="bottom" constant="8" id="8c8-0S-yQv"/>
+                                        <constraint firstItem="DzH-Tl-ILb" firstAttribute="trailing" secondItem="3Et-y8-rK7" secondAttribute="trailingMargin" id="Lms-d5-zQd"/>
+                                        <constraint firstItem="cBE-jc-aLt" firstAttribute="top" secondItem="3Et-y8-rK7" secondAttribute="topMargin" constant="18" id="P0l-ru-diL"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="vCO-Zx-vbO" secondAttribute="bottom" constant="10" id="RRO-D6-uv2"/>
+                                        <constraint firstItem="cBE-jc-aLt" firstAttribute="leading" secondItem="3Et-y8-rK7" secondAttribute="leadingMargin" id="brm-3g-7Lk"/>
+                                        <constraint firstItem="vCO-Zx-vbO" firstAttribute="trailing" secondItem="3Et-y8-rK7" secondAttribute="trailingMargin" id="nvL-j2-6iY"/>
+                                        <constraint firstItem="feW-lJ-3je" firstAttribute="leading" secondItem="3Et-y8-rK7" secondAttribute="leadingMargin" id="oW4-2G-MP7"/>
+                                        <constraint firstItem="vCO-Zx-vbO" firstAttribute="leading" secondItem="3Et-y8-rK7" secondAttribute="leadingMargin" id="oWr-WA-OVN"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
